--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Chromefreak : A Cross-Platform Forensic Framework for Google Chrome" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Chromefreak</title>
+    <title>Chromefreak by OsandaMalith</title>
   </head>
 
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/OsandaMalith/ChromeFreak">View on GitHub</a>
+    <header>
+      <div class="container">
+        <h1>Chromefreak</h1>
+        <h2>A Cross-Platform Forensic Framework for Google Chrome</h2>
 
-          <h1 id="project_title">Chromefreak</h1>
-          <h2 id="project_tagline">A Cross-Platform Forensic Framework for Google Chrome</h2>
+        <section id="downloads">
+          <a href="https://github.com/OsandaMalith/ChromeFreak/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/OsandaMalith/ChromeFreak/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/OsandaMalith/ChromeFreak" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/OsandaMalith/ChromeFreak/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/OsandaMalith/ChromeFreak/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="container">
+      <section id="main_content">
         <h1>
 <a name="chromefreak" class="anchor" href="#chromefreak"><span class="octicon octicon-link"></span></a>ChromeFreak</h1>
 
@@ -59,25 +56,16 @@
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Chromefreak maintained by <a href="https://github.com/OsandaMalith">OsandaMalith</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
           <script type="text/javascript">
             try {
-              var pageTracker = _gat._getTracker("UA-50092039-1");
+              var pageTracker = _gat._getTracker("UA-50095925-1");
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
-
 
   </body>
 </html>
