Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <div class="container">
       <section id="main_content">
         <h1>
+<a name="chromefreak" class="anchor" href="#chromefreak"><span class="octicon octicon-link"></span></a>ChromeFreak</h1>
+
+<p>A Cross-Platform Forensic Framework for Google Chrome</p>
 
 <p><img src="http://i.imgur.com/5nmRff4.png" alt=""></p>
 
@@ -49,7 +52,8 @@
 
 <p>I am not responsible for any kind of illegal acts you cause. This is meant to be used for ethical purposes by forensic investigators. If you plan to copy, redistribute please give credits to the original author.</p>
 
-<p>Follow Me: <a href="https://twitter.com/OsandaMalith">https://twitter.com/OsandaMalith</a> </p>
+<p>Video: <a href="https://www.youtube.com/watch?v=k3ekEmTlyIA">https://www.youtube.com/watch?v=k3ekEmTlyIA</a>
+Follow Me: <a href="https://twitter.com/OsandaMalith">https://twitter.com/OsandaMalith</a> </p>
       </section>
     </div>
 
