--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <p>I am not responsible for any kind of illegal acts you cause. This is meant to be used for ethical purposes by forensic investigators. If you plan to copy, redistribute please give credits to the original author.</p>
 
-<p>Video: <a href="https://www.youtube.com/watch?v=k3ekEmTlyIA">https://www.youtube.com/watch?v=k3ekEmTlyIA</a>
+<p>Video: <a href="https://www.youtube.com/watch?v=k3ekEmTlyIA">https://www.youtube.com/watch?v=k3ekEmTlyIA</a><br>
 Follow Me: <a href="https://twitter.com/OsandaMalith">https://twitter.com/OsandaMalith</a> </p>
       </section>
     </div>
