--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 
 <p>Video: <a href="https://www.youtube.com/watch?v=k3ekEmTlyIA">https://www.youtube.com/watch?v=k3ekEmTlyIA</a><br>
 Follow Me: <a href="https://twitter.com/OsandaMalith">https://twitter.com/OsandaMalith</a> </p>
+
+<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">ChromeFreak</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://osandamalith.github.io/ChromeFreak/" property="cc:attributionName" rel="cc:attributionURL">Osanda Malith Jayathissa</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.<br />Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://osandamalith.github.io/ChromeFreak/" rel="dct:source">http://osandamalith.github.io/ChromeFreak/</a>.
+        
       </section>
     </div>
 
